@@ -28,7 +28,10 @@ schema = atapi.Schema((
             name='additional_css',
             storage=atapi.AnnotationStorage(),
             schemata='subsite',
-            allowed_types=('Subsite', ),
+            allowable_content_types=('text/plain', ),
+            default_content_type='text/plain',
+            default_input_type='text/plain',
+            default_output_type='text/plain',
             widget=atapi.TextAreaWidget(
                 rows=15,
                 label=_(u'label_additional_css',
